# fractgen

./: .travis.yml  CMakeLists.txt  ChangeLog  Makefile  README.md  bootstrap  build-deb  debian.conf  fg2.pro  fractgen.lsm  make-deb  make-dist  make-ppa  make-rpm  packaging.conf  rpm.conf  website.config
.github/workflows/: linux-ubuntu-kde6.yml  linux.yml  packaging.yml
ci/: get-dependencies  install
debian/: changelog  clean  clifractgen.install  clifractgen.manpages  control  copyright  fractgen-common.install  fractgen-examples.install  fractgen.1  fractgen.desktop  fractgen.install  fractgen.manpages  gbp.conf  install  kfractgen.install  kfractgen.manpages  lintian-overrides  manpages  menu  rules  watch
debian/patches/: add_desktop.patch  ignore-locale-warning.patch  series  update-minimum-cmake-version.patch
debian/source/: include-binaries  lintian-overrides
debian/tests/: 10-clifractgen  control
debian/upstream/: metadata  signing-key.asc
freebsd/fractgen/: Makefile  distinfo  make-shar  pkg-descr  pkg-plist
packaging/: APKBUILD
rpm/: fractgen.spec
src/: CMakeLists.txt  classregistry.cc  classregistry.h  clifractgen.1  clifractgen.bash-completion  clifractgen.cc  colorschemeinterface.cc  colorschemeinterface.cpp  colorschemeinterface.h  configentry.h  doubleconfigentry.cc  doubleconfigentry.cpp  doubleconfigentry.h  dreibholz1.cc  dreibholz1.cpp  dreibholz1.h  fractalalgorithminterface.cc  fractalalgorithminterface.cpp  fractalalgorithminterface.h  fractalbuffer.cc  fractalbuffer.cpp  fractalbuffer.h  fractalcalculationthread.cc  fractalcalculationthread.cpp  fractalcalculationthread.h  fractalgenerator.cc  fractalgenerator.cpp  fractalgenerator.h  fractalgeneratordoc.cc  fractalgeneratordoc.cpp  fractalgeneratordoc.h  fractalgeneratorview.cc  fractalgeneratorview.cpp  fractalgeneratorview.h  fractalgeneratorviewbase.cc  fractalgeneratorviewbase.h  fractgen.1  fractgen.bash-completion  fractgen.cc  fractgen.cpp  (+37 more)
src/examples/: alpha01.fsf  alpha02.fsf  alpha03.fsf  alpha04.fsf  alpha05.fsf  alpha06.fsf  alpha07.fsf  alpha08.fsf  alpha09.fsf  alpha10.fsf  alpha11.fsf  alpha12.fsf  beta01.fsf  beta02.fsf  beta03.fsf  beta04.fsf  beta05.fsf  beta06.fsf  beta07.fsf  beta08.fsf  beta09.fsf  beta10.fsf  beta11.fsf  beta12.fsf  chi01.fsf  chi02.fsf  chi03.fsf  chi04.fsf  chi05.fsf  chi06.fsf  chi07.fsf  chi08.fsf  chi09.fsf  chi10.fsf  chi11.fsf  chi12.fsf  delta01.fsf  delta02.fsf  delta03.fsf  delta04.fsf  (+253 more)
